Tests/Resources/Ok/ambiguous_type_as_bottom_sum2.st
language core;

extend with #ambiguous-type-as-bottom, #structural-subtyping, #sum-types;

fn main(n : Bool) -> Bool + Nat {
  return (fn (x : Bool) {
    return inl(x) // в этом месте выводится тип-сумма Bot + Nat
  })(n)
}
