Tests/Resources/Bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/deref_parameter.st
// ERROR_NOT_A_REFERENCE
language core;
extend with #references;

fn foo(n : Nat) -> Nat { return *n }

fn main(n : Nat) -> Nat {
	return foo(n)
}
